# CorpusForge

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: workflow.yml
CorpusForge/: CorpusForge.py  Fict_Body_Extraction_Class.py  SpaCy_Pipeline_Class.py  __init__.py
CorpusForge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
